Migrate to ES6 but legacy mode

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babylonjs/core": "^4.1.0",
     "@babylonjs/gui": "^4.1.0",
+    "@babylonjs/loaders": "^4.1.0",
     "babylonjs": "^4.1.0",
     "babylonjs-loaders": "^4.1.0",
     "microsoft-cognitiveservices-speech-sdk": "^1.11.0",
